--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ section{
 background-color:#10101a ;
 }
 .home{
-  background-image: url(homes.jpg);
+  background-image: url(h.jpg);
   opacity: 0.9; 
   background-repeat: no-repeat;
   background-size: cover;
@@ -129,6 +129,7 @@ form .cv_btn:hover{
 
 #skills{
 background:linear-gradient(to bottom,#C9BBCF,white);
+height: 100vh;
 
 }
 .skills{
@@ -166,7 +167,7 @@ text-align: center;
 
 
 #about{
-  height: 100%;
+  height: 100vh;
 }
 .about{
   display: grid;
@@ -203,6 +204,7 @@ text-align: center;
 }
 
 .contact{
+  height: 100vh;
   width: 100%;
   background: linear-gradient(to bottom,#72FFFF,white);
 
