--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   padding:0;
   margin: 0;
   box-sizing: border-box;
-  /* background: #10101a; */
   font-family: sans-serif;
   text-decoration: none;
   list-style: none;
@@ -25,7 +24,7 @@ header{
 
 }
 .logo{
-  color:#fff;
+  color:grey;
   font-size: 1.8rem;
   font-weight: 600;
 }
@@ -65,8 +64,6 @@ background-color:#10101a ;
   background-size: cover;
   height: 100vh;
   width: 100%;
-  /* display: grid; */
-  /* grid-template-columns: repeat(2,1fr); */
   align-items: center;
 
 }
@@ -316,40 +313,99 @@ justify-content: space-between;
 
 }
 
-  @media(max-width:830px){
-    header{
-      padding:18px 3%;
-    }
-    #menu-icon{
-      display:block;
-    }
-    .skills .about .contact #contact #skills .home{
-      height:80vh;
-    }
-    .navbar{
-      position:absolute;
-      top:100%;
-      left:0;
-      right:0;
-      display:flex;
-      flex-direction:column;
-      background:#0b0b13;
-      box-shadow:0px 15px 30px 0px rgb(0 0 0 / 70%);
-      text-align : left;
-      transition:0.2; 
+@media screen and (max-width:1430px){
+  header{
+    padding:25px 3%;
+  }
+  section{
+    padding:50px 3%;
+  }
+  :root{
+    --big-font:3rem;
+    --h2-font:1.2rem;
+  }
+  #skills #about #contact #home{
+    height:50vh;
+  }
+  
+}
+@media screen and (max-width:1020px){
+  :root{
+    --big-font:3rem;
+    --h2-font:1.2rem;
+    --p-font:0.9rem;
+  }
+
+.home{
+  height:70vh;
+}
+#skills #about #contact #home{
+  height:50vh;
+}
+
+}
+
+@media screen and (max-width:830px){
+  header{
+    padding:18px 3%;
+  } 
+  #menu-icon{
+    display:block;
+  }
+  #skills #about #contact #home{
+    height:50vh;
+  }
+  
+  .navbar{
+    position:absolute;
+    top:100%;
+    left:0;
+    right:0;
+    display:flex;
+    flex-direction:column;
+    background:#0b0b13; 
+    box-shadow:0px 15px 30px 0px rgb(0 0 0 / 70%);
+    text-align : left;
+    transition:0.2s ease; 
 
 
-    }
-    .navbar a{
-      display:block;
-      padding : 1rem;
-      border-left:2px solid var(--main-color);
-      margin: 1rem;
-      display:block;
+  }
+  .navbar a{
+    display:block;
+    padding : 1rem;
+    border-left:2px solid #2fbf71;
+    margin: 1rem;
+    display:block;
 
-    }
-    .navbar.active{
-      top:100%;
-    }
-  }  
+  }
+  .navbar.active{
+    top:100%;
+  }
+}  
+@media screen and (max-width:795px){
+  .home{
+     grid-template-columns:1fr;
+     grid-gap:2rem;
+     text-align:center;
+     margin-top: 80px;
+     height:100vh;
+  }
+  .home-text p{
+    max-width:100%;
+  }
+  .about{
+    grid-template-columns: 1fr;
+  }
+  .about-text h2{
+    max-width: 100%;
+
+  }
+  .about-text h3{
+    max-width:100%;
+
+  }
+  #skills #about #contact #home{
+    height:0vh;
+  }
+  
 }
